--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,11 @@ html {
 }
 
 body {
-  font-family: 'Outfit', sans-serif;
-  background-image: url('/bg_clima.jpg');
-  height: 100vh;
+  font-family: "DM Serif Text", serif;
+  background-image: url('/montain-blue.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   color: var(--white);
   font-size: 2rem;
+  height: 100vh;
 }
