--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    padding: 1rem 0.2rem
 }
 
 .form input[type="text"],
@@ -30,4 +31,5 @@
     border-radius: 2rem;
     font-weight: 700;
     cursor: pointer;
+    margin-bottom: 1rem;   
 }
